<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sroy8091.myapplication.MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_pic" />

    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/company"
        android:textAllCaps="true"
        android:textSize="26sp" />

    <RelativeLayout
        android:id="@+id/describe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/company">

        <LinearLayout
            android:id="@+id/text_layouts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/for_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:text="@string/name" />

            <TextView
                style="@style/for_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <TextView
                style="@style/for_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/text_layouts"
            android:layout_alignRight="@id/text_layouts"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/founder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginTop="26dp"
                android:scaleType="centerCrop"
                android:src="@drawable/sumit2" />

            <TextView
                style="@style/for_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/founder" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/describe"
        android:layout_marginBottom="36dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/for_describe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/describe" />

        <TextView
            style="@style/for_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />
    </LinearLayout>
</RelativeLayout>
